Добавил возможность ввода с клавиатуры

--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <div class="calc">
-        <textarea class="input" id="textField" placeholder="Введите пример " wrap="soft" onkeydown=""></textarea>
-        <div class="item back" onclick="deleteLastDigit()">&larr;</div>
-        <div class="item clean" onclick="cleanField()">C</div>
-        <div class="item" onclick="addDigit('+')">+</div>
-        <div class="item" onclick="addDigit('-')">-</div>
-        <div class="item" onclick="addDigit('&times')">&times;</div>
-        <div class="item" onclick="addDigit('&divide')">&divide;</div>
-        <div class="item" onclick="addDigit(7)">7</div>
-        <div class="item" onclick="addDigit(8)">8</div>
-        <div class="item" onclick="addDigit(9)">9</div>
-        <div class="item" onclick="addDigit('(')">(</div>
-        <div class="item" onclick="addDigit(4) ">4</div>
-        <div class="item" onclick="addDigit(5) ">5</div>
-        <div class="item" onclick="addDigit(6) ">6</div>
-        <div class="item" onclick="addDigit(')')">)</div>
-        <div class="item" onclick="addDigit(1) ">1</div>
-        <div class="item" onclick="addDigit(2) ">2</div>
-        <div class="item" onclick="addDigit(3) ">3</div>
-        <div class="item equal" onclick="equal()">=</div>
-        <div class="item zero" onclick="addDigit(0)">0</div>
+<body id="checkKey">
+    <form class="calc">
+        <textarea class="input" id="textField" placeholder="Введите пример " wrap="soft" rows=4 readonly></textarea>
+        <div class="item back" onclick="deleteLastDigit()" id="back">&larr;</div>
+        <div class="item clean" onclick="cleanField()" id="clean">C</div>
+        <div class="item" onclick="addDigit('+')" id="button+">+</div>
+        <div class="item" onclick="addDigit('-')" id="button-">-</div>
+        <div class="item" onclick="addDigit('&times')" id="button×">&times;</div>
+        <div class="item" onclick="addDigit('&divide')" id="button÷">&divide;</div>
+        <div class="item" onclick="addDigit(7)" id="button7">7</div>
+        <div class="item" onclick="addDigit(8)" id="button8">8</div>
+        <div class="item" onclick="addDigit(9)" id="button9">9</div>
+        <div class="item" onclick="addDigit('(')" id="button(">(</div>
+        <div class="item" onclick="addDigit(4) " id="button4">4</div>
+        <div class="item" onclick="addDigit(5) " id="button5">5</div>
+        <div class="item" onclick="addDigit(6) " id="button6">6</div>
+        <div class="item" onclick="addDigit(')')" id="button)">)</div>
+        <div class="item" onclick="addDigit(1) " id="button1">1</div>
+        <div class="item" onclick="addDigit(2) " id="button2">2</div>
+        <div class="item" onclick="addDigit(3) " id="button3">3</div>
+        <div class="item equal" onclick="equal()" id="equal">=</div>
+        <div class="item zero" onclick="addDigit(0)" id="button0">0</div>
         <div class="item" onclick="addDigit('.')">.</div>
-    </div>
+    </form>
 </body>
 
 </html>
