вынес цвета в константы и немного почистил код

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body id="checkKey">
     <form class="calc">
         <textarea class="input" id="textField" placeholder="Введите пример " wrap="soft" rows=4 readonly></textarea>
-        <div class="item back" onclick="deleteLastDigit()" id="back">&larr;</div>
-        <div class="item clean" onclick="cleanField()" id="clean">C</div>
-        <div class="item" onclick="addDigit('+')" id="button+">+</div>
-        <div class="item" onclick="addDigit('-')" id="button-">-</div>
-        <div class="item" onclick="addDigit('&times')" id="button×">&times;</div>
-        <div class="item" onclick="addDigit('&divide')" id="button÷">&divide;</div>
-        <div class="item" onclick="addDigit(7)" id="button7">7</div>
-        <div class="item" onclick="addDigit(8)" id="button8">8</div>
-        <div class="item" onclick="addDigit(9)" id="button9">9</div>
-        <div class="item" onclick="addDigit('(')" id="button(">(</div>
-        <div class="item" onclick="addDigit(4) " id="button4">4</div>
-        <div class="item" onclick="addDigit(5) " id="button5">5</div>
-        <div class="item" onclick="addDigit(6) " id="button6">6</div>
-        <div class="item" onclick="addDigit(')')" id="button)">)</div>
-        <div class="item" onclick="addDigit(1) " id="button1">1</div>
-        <div class="item" onclick="addDigit(2) " id="button2">2</div>
-        <div class="item" onclick="addDigit(3) " id="button3">3</div>
-        <div class="item equal" onclick="equal()" id="equal">=</div>
-        <div class="item zero" onclick="addDigit(0)" id="button0">0</div>
-        <div class="item" onclick="addDigit('.')">.</div>
+        <div class="item back" onmousedown="deleteLastDigit()" id="back">&larr;</div>
+        <div class="item clean" onmousedown="cleanField()" id="clean">C</div>
+        <div class="item" onmousedown="addDigit('+')" id="button+">+</div>
+        <div class="item" onmousedown="addDigit('-')" id="button-">-</div>
+        <div class="item" onmousedown="addDigit('&times')" id="button×">&times;</div>
+        <div class="item" onmousedown="addDigit('&divide')" id="button÷">&divide;</div>
+        <div class="item" onmousedown="addDigit(7)" id="button7">7</div>
+        <div class="item" onmousedown="addDigit(8)" id="button8">8</div>
+        <div class="item" onmousedown="addDigit(9)" id="button9">9</div>
+        <div class="item" onmousedown="addDigit('(')" id="button(">(</div>
+        <div class="item" onmousedown="addDigit(4) " id="button4">4</div>
+        <div class="item" onmousedown="addDigit(5) " id="button5">5</div>
+        <div class="item" onmousedown="addDigit(6) " id="button6">6</div>
+        <div class="item" onmousedown="addDigit(')')" id="button)">)</div>
+        <div class="item" onmousedown="addDigit(1) " id="button1">1</div>
+        <div class="item" onmousedown="addDigit(2) " id="button2">2</div>
+        <div class="item" onmousedown="addDigit(3) " id="button3">3</div>
+        <div class="item equal" onmousedown="equal()" id="equal">=</div>
+        <div class="item zero" onmousedown="addDigit(0)" id="button0">0</div>
+        <div class="item" onmousedown="addDigit('.')" id="button.">.</div>
     </form>
 </body>
 
