вот и 3 версией пахнет:  • реализовал недостающие функции   • чутка переделал анимацию нажатия кнопок  • поправил комментарии

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <textarea class="input" id="textField" placeholder="Введите пример " wrap="soft" rows=4 readonly></textarea>
         <div class="item back" onmousedown="deleteLastDigit()" id="back">&larr;</div>
         <div class="item clean" onmousedown="cleanField()" id="clean">C</div>
-        <div class="item" onmousedown="addDigit('+')" id="button+">+</div>
+        <div class="item plus" onmousedown="addDigit('+')" id="button+">+</div>
         <div class="item" onmousedown="addDigit('-')" id="button-">-</div>
         <div class="item" onmousedown="addDigit('&times')" id="button×">&times;</div>
         <div class="item" onmousedown="addDigit('&divide')" id="button÷">&divide;</div>
+        <div class="item" onmousedown="addDigit('%')" id="button%">mod</div>
+        <div class="item" onmousedown="calculateFactorial()" id="button!">!</div>
+        <div class="item" onmousedown="exponentiate()" id="exponentiate">^</div>
         <div class="item" onmousedown="addDigit(7)" id="button7">7</div>
         <div class="item" onmousedown="addDigit(8)" id="button8">8</div>
         <div class="item" onmousedown="addDigit(9)" id="button9">9</div>
