Добавил иконку и явно указал кодировку для совместимости

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
+    <meta charset="UTF-8">
     <title>Калькулятор</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.png" type="image/png">
 </head>
 
 <body id="checkKey">
